# Deepfake-Detection-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  videos.yaml
dfdetect/: data_images.py  data_videos.py  infer.py  models.py  utils_face.py
scripts/: eval.py  infer_image.py  infer_video.py  train_images.py  train_videos.py
webapp/: main.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: dashboard.html  home.html
